[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/assets/fonts/grisly-beast-font/GrislyBeastRegular-0W9rG.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/assets/fonts/typewriter.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/scenes/main/settings/settings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=9]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.27451 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.431373 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 0.117647 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Settings" type="Control"]
script = ExtResource( 3 )

[node name="SettingsBody" type="Control" parent="."]
margin_left = 300.0
margin_top = 40.0
margin_right = 1620.0
margin_bottom = 840.0

[node name="SettingsPanel" type="ColorRect" parent="SettingsBody"]
margin_top = 32.0
margin_right = 1320.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 0.470588 )

[node name="SettingsTabContainer" type="TabContainer" parent="SettingsBody"]
show_behind_parent = true
margin_right = 1328.0
margin_bottom = 800.0
rect_min_size = Vector2( 1320, 800 )
custom_constants/hseparation = 0
custom_constants/label_valign_bg = 0
custom_constants/top_margin = 0
custom_constants/side_margin = 0
custom_fonts/font = SubResource( 9 )
all_tabs_in_front = true

[node name="Volume" type="VBoxContainer" parent="SettingsBody/SettingsTabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 44.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 0

[node name="VolumeSettingsLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Volume"]
margin_right = 1320.0
margin_bottom = 80.0
rect_min_size = Vector2( 1320, 80 )
custom_fonts/font = SubResource( 2 )
text = "VOLUME"
align = 1
valign = 1

[node name="VolumeSettings" type="GridContainer" parent="SettingsBody/SettingsTabContainer/Volume"]
margin_top = 80.0
margin_right = 1320.0
margin_bottom = 340.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 3

[node name="MasterVolumeSettingLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Volume/VolumeSettings"]
margin_right = 600.0
margin_bottom = 80.0
rect_min_size = Vector2( 600, 80 )
custom_fonts/font = SubResource( 2 )
text = "Master Volume"
align = 1
valign = 1

[node name="MasterVolumeSettingSlider" type="HSlider" parent="SettingsBody/SettingsTabContainer/Volume/VolumeSettings"]
margin_left = 620.0
margin_right = 1020.0
margin_bottom = 80.0
rect_min_size = Vector2( 400, 80 )
step = 5.0
value = 50.0

[node name="MasterVolumeSettingValue" type="Label" parent="SettingsBody/SettingsTabContainer/Volume/VolumeSettings"]
margin_left = 1040.0
margin_right = 1140.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = SubResource( 2 )
text = "80"
align = 1
valign = 1

[node name="MusicVolumeSettingLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Volume/VolumeSettings"]
margin_top = 90.0
margin_right = 600.0
margin_bottom = 170.0
rect_min_size = Vector2( 600, 80 )
custom_fonts/font = SubResource( 2 )
text = "Music Volume"
align = 1
valign = 1

[node name="MusicVolumeSettingSlider" type="HSlider" parent="SettingsBody/SettingsTabContainer/Volume/VolumeSettings"]
margin_left = 620.0
margin_top = 90.0
margin_right = 1020.0
margin_bottom = 170.0
rect_min_size = Vector2( 400, 80 )
step = 5.0
value = 50.0

[node name="MusicVolumeSettingValue" type="Label" parent="SettingsBody/SettingsTabContainer/Volume/VolumeSettings"]
margin_left = 1040.0
margin_top = 90.0
margin_right = 1140.0
margin_bottom = 170.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = SubResource( 2 )
text = "80"
align = 1
valign = 1

[node name="SfxVolumeSettingLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Volume/VolumeSettings"]
margin_top = 180.0
margin_right = 600.0
margin_bottom = 260.0
rect_min_size = Vector2( 600, 80 )
custom_fonts/font = SubResource( 2 )
text = "SFX Volume"
align = 1
valign = 1

[node name="SfxVolumeSettingSlider" type="HSlider" parent="SettingsBody/SettingsTabContainer/Volume/VolumeSettings"]
margin_left = 620.0
margin_top = 180.0
margin_right = 1020.0
margin_bottom = 260.0
rect_min_size = Vector2( 400, 80 )
step = 5.0
value = 50.0

[node name="SfxVolumeSettingValue" type="Label" parent="SettingsBody/SettingsTabContainer/Volume/VolumeSettings"]
margin_left = 1040.0
margin_top = 180.0
margin_right = 1140.0
margin_bottom = 260.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = SubResource( 2 )
text = "80"
align = 1
valign = 1

[node name="Controls" type="VBoxContainer" parent="SettingsBody/SettingsTabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 44.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 0

[node name="ControlsSettingsLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Controls"]
margin_right = 1320.0
margin_bottom = 80.0
rect_min_size = Vector2( 1320, 80 )
custom_fonts/font = SubResource( 2 )
text = "Controls"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="SettingsBody/SettingsTabContainer/Controls"]
position = Vector2( -4, -44 )

[node name="ControlsSettings" type="GridContainer" parent="SettingsBody/SettingsTabContainer/Controls"]
margin_top = 80.0
margin_right = 1320.0
margin_bottom = 340.0
rect_min_size = Vector2( 1320, 0 )
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 4

[node name="GrowthLeftSettingLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_right = 450.0
margin_bottom = 80.0
rect_min_size = Vector2( 450, 80 )
custom_fonts/font = SubResource( 2 )
text = "Growth - Left"
align = 1
valign = 1

[node name="GrowthLeftSettingValue" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_left = 470.0
margin_right = 620.0
margin_bottom = 80.0
rect_min_size = Vector2( 150, 80 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "S"
align = 1
valign = 1

[node name="DecayLeftSettingLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_left = 640.0
margin_right = 1090.0
margin_bottom = 80.0
rect_min_size = Vector2( 450, 80 )
custom_fonts/font = SubResource( 2 )
text = "Decay - Left"
align = 1
valign = 1

[node name="DecayLeftSettingValue" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_left = 1110.0
margin_right = 1260.0
margin_bottom = 80.0
rect_min_size = Vector2( 150, 80 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "J"
align = 1
valign = 1

[node name="GrowthCenterSettingLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_top = 90.0
margin_right = 450.0
margin_bottom = 170.0
rect_min_size = Vector2( 450, 80 )
custom_fonts/font = SubResource( 2 )
text = "Growth - Center"
align = 1
valign = 1

[node name="GrowthCenterSettingValue" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_left = 470.0
margin_top = 90.0
margin_right = 620.0
margin_bottom = 170.0
rect_min_size = Vector2( 150, 80 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "D"
align = 1
valign = 1

[node name="DecayCenterSettingLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_left = 640.0
margin_top = 90.0
margin_right = 1090.0
margin_bottom = 170.0
rect_min_size = Vector2( 450, 80 )
custom_fonts/font = SubResource( 2 )
text = "Decay - Center"
align = 1
valign = 1

[node name="DecayCenterSettingValue" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_left = 1110.0
margin_top = 90.0
margin_right = 1260.0
margin_bottom = 170.0
rect_min_size = Vector2( 150, 80 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "K"
align = 1
valign = 1

[node name="GrowthRightSettingLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_top = 180.0
margin_right = 450.0
margin_bottom = 260.0
rect_min_size = Vector2( 450, 80 )
custom_fonts/font = SubResource( 2 )
text = "Growth - Right"
align = 1
valign = 1

[node name="GrowthRightSettingValue" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_left = 470.0
margin_top = 180.0
margin_right = 620.0
margin_bottom = 260.0
rect_min_size = Vector2( 150, 80 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "F"
align = 1
valign = 1

[node name="DecayRightSettingLabel" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_left = 640.0
margin_top = 180.0
margin_right = 1090.0
margin_bottom = 260.0
rect_min_size = Vector2( 450, 80 )
custom_fonts/font = SubResource( 2 )
text = "Decay - Right"
align = 1
valign = 1

[node name="DecayRightSettingValue" type="Label" parent="SettingsBody/SettingsTabContainer/Controls/ControlsSettings"]
margin_left = 1110.0
margin_top = 180.0
margin_right = 1260.0
margin_bottom = 260.0
rect_min_size = Vector2( 150, 80 )
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "L"
align = 1
valign = 1

[node name="SettingsBackButton" type="Button" parent="."]
margin_left = 782.0
margin_top = 960.0
margin_right = 1182.0
margin_bottom = 1085.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 88, -488 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Back"

[connection signal="value_changed" from="SettingsBody/SettingsTabContainer/Volume/VolumeSettings/MasterVolumeSettingSlider" to="." method="_on_MasterVolumeSettingSlider_value_changed"]
[connection signal="value_changed" from="SettingsBody/SettingsTabContainer/Volume/VolumeSettings/MusicVolumeSettingSlider" to="." method="_on_MusicVolumeSettingSlider_value_changed"]
[connection signal="value_changed" from="SettingsBody/SettingsTabContainer/Volume/VolumeSettings/SfxVolumeSettingSlider" to="." method="_on_SfxVolumeSettingSlider_value_changed"]
[connection signal="gui_input" from="SettingsBody/SettingsTabContainer/Controls/ControlsSettings/GrowthLeftSettingValue" to="." method="_on_GrowthLeftSettingValue_gui_input"]
[connection signal="gui_input" from="SettingsBody/SettingsTabContainer/Controls/ControlsSettings/DecayLeftSettingValue" to="." method="_on_DecayLeftSettingValue_gui_input"]
[connection signal="gui_input" from="SettingsBody/SettingsTabContainer/Controls/ControlsSettings/GrowthCenterSettingValue" to="." method="_on_GrowthCenterSettingValue_gui_input"]
[connection signal="gui_input" from="SettingsBody/SettingsTabContainer/Controls/ControlsSettings/DecayCenterSettingValue" to="." method="_on_DecayCenterSettingValue_gui_input"]
[connection signal="gui_input" from="SettingsBody/SettingsTabContainer/Controls/ControlsSettings/GrowthRightSettingValue" to="." method="_on_GrowthRightSettingValue_gui_input"]
[connection signal="gui_input" from="SettingsBody/SettingsTabContainer/Controls/ControlsSettings/DecayRightSettingValue" to="." method="_on_DecayRightSettingValue_gui_input"]
[connection signal="pressed" from="SettingsBackButton" to="." method="_on_SettingsBackButton_pressed"]
